tema, contextualização, problema, objetivos, palavras-chave e referências

--- a/tex/0_estruturaTemp.tex
+++ b/tex/0_estruturaTemp.tex
@@ -1,50 +1,60 @@
 \section{Tema}%
 ANÁLISE DAS EVASÕES DE ALUNOS DOS CURSOS DA UnB: Um estudo no âmbito da graduação e pós-graduação
 
-\section{Problema}%
+\section{Contextualização}%
+
 As altas taxas de evasão de cursos de nível superior no Brasil é um problema a ser estudado e combatido pelas instituições de nível superior. Existem cursos onde o  número de concluintes é absolutamente inferior aos de ingressantes. 
 
-Conseguir prever o desempenho dos alunos durante a vida acadêmica é um desafio para as equipes de planejamento de graduação. Políticas sociais são lançadas e as mesmas devem ser avaliadas para não comprometer o nível intelectual da Universidade.
+Conseguir prever o desempenho dos alunos durante a vida acadêmica é um desafio para as equipes de planejamento de graduação. 
 
-A necessidade de explorar dados para prever tendências, descobrir padrões e extrair inteligência de dados de um determinado negócio, ou seja, transformar dados em informação é um processo que vem sendo aplicado com  maior frequência pelas grandes instituições para apoio as tomadas de decisões e definição das diretrizes por parte das equipes de planejamento das mesmas.
+A necessidade de explorar dados para prever tendências, descobrir padrões e extrair inteligência de dados de um determinado negócio, ou seja, transformar dados em informação é um processo que vem sendo aplicado com  maior frequência pelas grandes instituições para apoio às tomadas de decisões e à definição das diretrizes por parte das equipes de planejamento das mesmas.
 
 A intenção do discente em evadir às vezes é conhecida tardiamente impedindo que a gestão da Universidade tome providências para reverter o quadro.
 
 Ao conseguir identificar o risco de um aluno fracassar, ou seja, evadir, com antecedência pode ajudar os gestores da Universidade a elaborar um plano personalizado para mitigação deste risco.
-Para uma melhor compreensão das evasões podemos trabalhar com questionamentos , tais como:
+%Para uma melhor compreensão das evasões podemos trabalhar com questionamentos , tais como:
 
-\begin{enumerate} 
-    \begin{itemize}
-        \item	Cursos da área de exatas possuem maior índice de evasões comparados aos da área de humanas?
-        \item	Distância entre Campi e a residência do discente influência na decisão para evadir?
-        \item	Há correlação entre evasões e ingresso pelo programa de cotas?
-        \item	Greve do restaurante Universitário influência a evasão de discentes baixa renda?
-    \end{itemize}%
-\end{enumerate}%
+\section{Problema}%
 
-Visto o exposto, a administração das Universidades podem ser mais eficientes para combater este problema conhecendo melhor os motivos pelos quais levam os discentes a desistirem dos cursos.  
-
-
+Há correlação entre evasão de discentes cotistas de baixa renda do ensino superior e a distância do Campi da sua residência?
+%Greve do restaurante universitário é fator preponderante para evasão de discentes cotistas de baixa renda da Universidade de Brasília?
 \section{Objetivos}%
 
 \subsection{Objetivo Geral}
-O objetivo da proposta é um estudo acerca da evasão dos cursos ofertados pela Universidade de Brasília. Comparar os índices de evasões entre os cursos relacionados a dados acadêmicos e pessoais dos alunos com o intuito  de encontrar padrões que possam auxiliar a identificação de possíveis evasões com antecedência. Permitindo assim um trabalho de mitigação dos riscos de fracasso dos mesmos, ou seja, o aluno sair do curso por um motivo diferente de formatura.
+
+O objetivo da proposta é estudar padrões socioeconomicos e comportamentais dos alunos que evadem dos cursos ofertados pela Universidade de Brasília. 
  
-Para realização do estudo serão usadas como fonte as bases de dados dos sistemas legados da Universidade de Brasília, com enfoque no ciclo de vida acadêmico dos discentes e docentes. Aplicar técnicas de mineração de dados para a descoberta de novos padrões relacionados as diversas formas de evasões dos cursos ofertados pela UnB para que possam prever tendências que  auxiliarão a equipe de planejamento a acompanhar e definir as metas e diretrizes da Universidade no âmbito acadêmico.
+\subsection{Objetivo específicos}
+
+\begin{enumerate} 
+    \begin{itemize}
+        \item   Levantamento bibliográfico;
+        \item   Levantar dados da evasão do ensino superior;
+        \item	Padronizar a informação de diversas fontes;
+        \item	Analisar os dados de um determinado período;
+        \item   Comparar os índices de evasões entre os cursos relacionados a dados acadêmicos e pessoais dos alunos com o intuito  de encontrar padrões que possam auxiliar a identificação de possíveis evasões com antecedência. Permitindo assim um trabalho de mitigação dos riscos de fracasso dos mesmos, ou seja, o aluno sair do curso por um motivo diferente de formatura;
+        \item	Apresentar a informação de maneira consistente e única;
+        \item	Fomentar as áreas de negócio com informações do estudo para que tomem decisões mais precisas.
+        
+       % \item   Conhecimento dos dados gerados pelos sistemas acadêmicos legados com enfoque nas evasões.
+    \end{itemize}%
+\end{enumerate}%
+
+\section{Palavras-chave}%
+Evasão no ensino superior
+
+ \begin{comment} 
+\section{Justificativa}%
 
 Ao identificar se um aluno de um determinado curso corre o risco de fracassar, por exemplo, abandonar o curso, com antecedência é possível tomar providências cabíveis para mitigar ou até mesmo eliminar este risco. Agindo com antecedência é possível elaborar um plano de intervenção personalizado para melhoria do desempenho evitando o abandono e consequentemente o desperdício de dinheiro público no caso da evasão do mesmo.
 
-\subsection{Objetivo específicos}
-\begin{enumerate} 
-    \begin{itemize}
-        \item	Apresentar a informação de maneira consistente e única;
-        \item	Fomentar as áreas de negócio com informações do estudo para que tomem decisões mais precisas;
-        \item	Padronizar a informação de diversas fontes;
-        \item	Analisar os dados de um determinado período;
-        \item   Comparar a evasão entre os cursos da UnB;
-        \item   Conhecimento dos dados gerados pelos sistemas acadêmicos legados com enfoque nas evasões.
-    \end{itemize}%
-\end{enumerate}%
+Visto o exposto, a administração das Universidades podem ser mais eficientes para combater este problema conhecendo melhor os motivos pelos quais levam os discentes a desistirem dos cursos.  
+
+\section{Metodologia}%
+
+Para realização do estudo serão usadas como fonte as bases de dados dos sistemas de controle acadêmicos da Universidade de Brasília, com enfoque no ciclo de vida acadêmico dos discentes e docentes. Aplicar técnicas de mineração de dados para a descoberta de novos padrões relacionados as diversas formas de evasões dos cursos ofertados pela UnB para que possam prever tendências que  auxiliarão a equipe de planejamento a acompanhar e definir as metas e diretrizes da Universidade no âmbito acadêmico.
+\end{comment}
+
 \section{Citações}%
    Citações: 
    \cite{Gilioli2016EVASAOGilioli},%
