correção do tema

--- a/tex/0_estruturaTemp.tex
+++ b/tex/0_estruturaTemp.tex
@@ -1,5 +1,5 @@
 \section{Tema}%
-ANÁLISE DAS EVASÕES DE ALUNOS DOS CURSOS DA UnB: Um estudo no âmbito da graduação e pós-graduação
+ANÁLISE DAS EVASÕES DE DISCENTES BAIXA RENDA DOS CURSOS DA UnB: Um estudo no âmbito da graduação e pós-graduação
 
 \section{Contextualização}%
 
@@ -16,7 +16,7 @@ Ao conseguir identificar o risco de um aluno fracassar, ou seja, evadir, com ant
 
 \section{Problema}%
 
-Há correlação entre evasão de discentes cotistas de baixa renda do ensino superior e a distância do Campi da sua residência?
+Há correlação entre evasão de discentes cotistas de baixa renda da Universidade de Brasília e a distância do Campi da sua residência?
 %Greve do restaurante universitário é fator preponderante para evasão de discentes cotistas de baixa renda da Universidade de Brasília?
 \section{Objetivos}%
 
