--- a/mendeley_v2.bib
+++ b/mendeley_v2.bib
@@ -9,8 +9,8 @@
     keywords = {Ensino superior, evas{\~{a}}o escolar-Brasil}
 }
 
-@article{Veneroso2016AsaaFederal,
-    title = {{Asaa Razões E Influ{\^{e}}ncias Para a Evas{\~{a}}o Universit{\'{a}}ria : Um Estudo Com Estudantes Ingressantes Nos Reasons and Influences for University Evasion : a Study With Students Freshmen in Institutions of Accounting Sciences Courses Public Federal}},
+@article{Veneroso2016AsFederal,
+    title = {{As Razões E Influ{\^{e}}ncias Para a Evas{\~{a}}o Universit{\'{a}}ria : Um Estudo Com Estudantes Ingressantes Nos Reasons and Influences for University Evasion : a Study With Students Freshmen in Institutions of Accounting Sciences Courses Public Federal}},
     year = {2016},
     author = {Veneroso, Jacqueline},
     pages = {141--161}
@@ -116,4 +116,12 @@
     isbn = {9789221264637},
     doi = {10.1590/S0104-40602006000200009},
     issn = {0104-4060}
+}
+
+@article{Saccaro2016RETENCAOPNAES,
+    title = {{RETEN{\c{C}}{\~{A}}O E EVAS{\~{A}}O NO ENSINO SUPERIOR BRASILEIRO: UMA AN{\'{A}}LISE DOS EFEITOS DA BOLSA PERMAN{\^{E}}NCIA DO PNAES}},
+    year = {2016},
+    journal = {44{${}^\circ$} Encontro Nacional de Economia-Anpec, 2016, Brasil.},
+    author = {Saccaro, Alice and Tulio, Marco and Fran{\c{c}}a, Aniceto},
+    keywords = {dropout rate, retention, student aid, tertiary education}
 }
