--- a/tex/0_estruturaTemp.tex
+++ b/tex/0_estruturaTemp.tex
@@ -14,7 +14,7 @@ A intenção do discente em evadir às vezes é conhecida tardiamente impedindo 
 Ao conseguir identificar o risco de um aluno fracassar, ou seja, evadir, com antecedência pode ajudar os gestores da Universidade a elaborar um plano personalizado para mitigação deste risco.
 %Para uma melhor compreensão das evasões podemos trabalhar com questionamentos , tais como:
 
-\section{Problema}%
+\section{Problema}% 
 
 Há correlação entre evasão de discentes cotistas de baixa renda da Universidade de Brasília e a distância do Campi da sua residência?
 %Greve do restaurante universitário é fator preponderante para evasão de discentes cotistas de baixa renda da Universidade de Brasília?
@@ -22,7 +22,7 @@ Há correlação entre evasão de discentes cotistas de baixa renda da Universid
 
 \subsection{Objetivo Geral}
 
-O objetivo da proposta é estudar padrões socioeconomicos e comportamentais dos alunos que evadem dos cursos ofertados pela Universidade de Brasília. 
+O objetivo da proposta é estudar padrões socioeconômicos e comportamentais dos alunos que evadem dos cursos ofertados pela Universidade de Brasília. 
  
 \subsection{Objetivo específicos}
 
@@ -65,7 +65,7 @@ Para realização do estudo serão usadas como fonte as bases de dados dos siste
    \cite{Nassar2011Do.}
    \cite{Pereira2003DeterminantesPara}
    \cite{Silva2014EvasaoTransacao}
-   \cite{Veneroso2016AsaaFederal}
+   \cite{Veneroso2016AsFederal}
    \cite{Vitelli2010EvasaoFenomeno}
    \cite{Pereira2011EvasaoGrosso}
 
