acrescentado justificativa e revisão teorica

--- a/mendeley_v2.bib
+++ b/mendeley_v2.bib
@@ -82,6 +82,33 @@
     pages = {251}
 }
 
+@article{Teresa2001IdentidadeUniversitaria,
+    title = {{Identidade profissional e op{\c{c}}{\~{a}}o universit{\'{a}}ria}},
+    year = {2001},
+    journal = {Psicologia Escolar e Educacional},
+    author = {Teresa, Elizabeth and Sbardelini, Brunini},
+    month = {6},
+    pages = {91--93},
+    volume = {5},
+    url = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S1413-85572001000100014&nrm=iso}
+}
+
+@misc{SindicatodasEntidadesMantenedorasdeEstabelecimentosdeEnsinoSuperiornoEstadodeSaoPauloSEMESP2012IndiceInformacao,
+    title = {{{\'{I}}ndice de evas{\~{a}}o de alunos {\'{e}} maior na {\'{a}}rea de tecnologia da informa{\c{c}}{\~{a}}o}},
+    year = {2012},
+    booktitle = {S{\'{i}}tio G1},
+    author = {{Sindicato das Entidades Mantenedoras de Estabelecimentos de Ensino Superior no Estado de S{\~{a}}o Paulo (SEMESP)}},
+    url = {http://g1.globo.com/sp/sao-carlos-regiao/noticia/2012/09/indice-de-evasao-de-alunos-e-maior-na-area-de-tecnologia-da-informacao.html}
+}
+
+@misc{InstitutoNacionaldeEstudosePesquisasEducacionaisInep1996InformeEscolar,
+    title = {{Informe estat{\'{i}}stico do MEC revela melhoria do rendimento escolar}},
+    year = {1996},
+    booktitle = {S{\'{i}}tio INEP},
+    author = {Instituto Nacional de Estudos e Pesquisas Educacionais (Inep), órgão do Ministério da Educação (MEC)},
+    url = {http://portal.inep.gov.br/artigo/-/asset_publisher/B4AQV9zFY7Bv/content/informe-estatistico-do-mec-revela-melhoria-do-rendimento-escolar/21206}
+}
+
 @article{Andriola2006OpinioesUFC,
     title = {{Opiniões de docentes e de coordenadores acerca do fen{\^{o}}meno da evas{\~{a}}o discente dos cursos de gradua{\c{c}}{\~{a}}o da Universidade Federal do Cear{\'{a}} (UFC)}},
     year = {2006},
