--- a/monografia.tex
+++ b/monografia.tex
@@ -17,15 +17,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \orientador{\prof[a] \dr[a] Krisley Mendes}{FACE/UnB}%
 %\coorientador{\prof \dr José Ralha}{CIC/UnB}
-\coordenador[a]{\prof[a] \dr[a] Joana Farias}{Bibliothèque universelle de Genève}%
-\diamesano{24}{maio}{2018}%
+%\coordenador[a]{\prof[a] \dr[a] Joana Farias}{Bibliothèque universelle de Genève}%
+\diamesano{12}{junho}{2018}%
 
 %\membrobanca{\prof \dr Donald Knuth}{Stanford University}%
 %\membrobanca{\dr Leslie Lamport}{Microsoft Research}%
 
 \autor{Tiago M.}{Chagas - Matrícula: 180006436}%
 
-\titulo{ANÁLISE DAS EVASÕES DE ALUNOS DOS CURSOS DA UnB: Um estudo no âmbito da graduação e pós-graduação}%
+\titulo{ANÁLISE DA EVASÃO DE ALUNOS DOS CURSOS DA UnB: Um estudo no âmbito da graduação}%
 
 %\palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
 %\keywords{LaTeX, scientific method, thesis}%
