--- a/tex/0_estruturaTemp.tex
+++ b/tex/0_estruturaTemp.tex
@@ -1,9 +1,11 @@
 \section{Tema}%
-ANÁLISE DAS EVASÕES DE DISCENTES BAIXA RENDA DOS CURSOS DA UnB: Um estudo no âmbito da graduação e pós-graduação
+ANÁLISE DA EVASÃO DE ALUNOS DOS CURSOS DA UnB: Um estudo no âmbito da graduação
 
 \section{Contextualização}%
 
-As altas taxas de evasão de cursos de nível superior no Brasil é um problema a ser estudado e combatido pelas instituições de nível superior. Existem cursos onde o  número de concluintes é absolutamente inferior aos de ingressantes. 
+As altas taxas de evasão de cursos de nível superior no Brasil é um problema a ser estudado e combatido pelas instituições de nível superior. Existem cursos onde o  número de concluintes é absolutamente inferior aos de ingressantes.
+
+Segundo a reportagem do sítio G1 com o Sindicato das Entidades Mantenedoras de Estabelecimentos de Ensino Superior no Estado de São Paulo (SEMESP) \cite{SindicatodasEntidadesMantenedorasdeEstabelecimentosdeEnsinoSuperiornoEstadodeSaoPauloSEMESP2012IndiceInformacao}, “A cada três alunos que entram no curso de sistemas de informação, apenas um recebe o diploma.  Em ciência da computação, a cada quatro alunos que entram no curso, apenas um termina. O que acontece é que muitos estudantes são atraídos para o mercado de trabalho, que está aquecido, mas sofre com a falta de mão de obra.” . 
 
 Conseguir prever o desempenho dos alunos durante a vida acadêmica é um desafio para as equipes de planejamento de graduação. 
 
@@ -16,7 +18,8 @@ Ao conseguir identificar o risco de um aluno fracassar, ou seja, evadir, com ant
 
 \section{Problema}% 
 
-Há correlação entre evasão de discentes cotistas de baixa renda da Universidade de Brasília e a distância do Campi da sua residência?
+Há correlação entre evasão de discentes da Universidade de Brasília e a e seus dados socioeconômicos?
+%Há correlação entre evasão de discentes cotistas de baixa renda da Universidade de Brasília e a distância do Campi da sua residência?
 %Greve do restaurante universitário é fator preponderante para evasão de discentes cotistas de baixa renda da Universidade de Brasília?
 \section{Objetivos}%
 
@@ -28,10 +31,11 @@ O objetivo da proposta é estudar padrões socioeconômicos e comportamentais do
 
 \begin{enumerate} 
     \begin{itemize}
-        \item   Levantamento bibliográfico;
+        \item   Levantar bibliografia;
         \item   Levantar dados da evasão do ensino superior;
+        \item   Levantar dados socioeconômicos disponíveis nas bases de dados dos sistemas da UnB;
         \item	Padronizar a informação de diversas fontes;
-        \item	Analisar os dados de um determinado período;
+        \item	Analisar os dados do período 2008 à 2018;
         \item   Comparar os índices de evasões entre os cursos relacionados a dados acadêmicos e pessoais dos alunos com o intuito  de encontrar padrões que possam auxiliar a identificação de possíveis evasões com antecedência. Permitindo assim um trabalho de mitigação dos riscos de fracasso dos mesmos, ou seja, o aluno sair do curso por um motivo diferente de formatura;
         \item	Apresentar a informação de maneira consistente e única;
         \item	Fomentar as áreas de negócio com informações do estudo para que tomem decisões mais precisas.
@@ -41,19 +45,49 @@ O objetivo da proposta é estudar padrões socioeconômicos e comportamentais do
 \end{enumerate}%
 
 \section{Palavras-chave}%
-Evasão no ensino superior
+Evasão no ensino superior; socioeconômico.
 
- \begin{comment} 
+
 \section{Justificativa}%
 
 Ao identificar se um aluno de um determinado curso corre o risco de fracassar, por exemplo, abandonar o curso, com antecedência é possível tomar providências cabíveis para mitigar ou até mesmo eliminar este risco. Agindo com antecedência é possível elaborar um plano de intervenção personalizado para melhoria do desempenho evitando o abandono e consequentemente o desperdício de dinheiro público no caso da evasão do mesmo.
 
 Visto o exposto, a administração das Universidades podem ser mais eficientes para combater este problema conhecendo melhor os motivos pelos quais levam os discentes a desistirem dos cursos.  
-
+ \begin{comment} 
 \section{Metodologia}%
 
 Para realização do estudo serão usadas como fonte as bases de dados dos sistemas de controle acadêmicos da Universidade de Brasília, com enfoque no ciclo de vida acadêmico dos discentes e docentes. Aplicar técnicas de mineração de dados para a descoberta de novos padrões relacionados as diversas formas de evasões dos cursos ofertados pela UnB para que possam prever tendências que  auxiliarão a equipe de planejamento a acompanhar e definir as metas e diretrizes da Universidade no âmbito acadêmico.
 \end{comment}
+
+\section{Revisão Teórica}% 
+
+A priori o conceito de evasão parece único, ou seja, o aluno sai do curso por um motivo diferente de formatura.  Porém, o conceito pode mudar de autor para autor. Sendo assim existem vários conceitos para evasão. 
+
+Segundo SBARDELINI(2001) \cite{Teresa2001IdentidadeUniversitaria}, evasão não pode ser considerada somente abandono da instituição. Uma troca de curso, por exemplo, pode ser considerada uma evasão. Contudo, neste projeto abordaremos vários tipos de evasões.
+ 
+Para o INEP(1996)\cite{InstitutoNacionaldeEstudosePesquisasEducacionaisInep1996InformeEscolar}, abandono e evasão são diferentes. “O conceito técnico de abandono é diferente de evasão. Abandono quer dizer que o aluno deixa a escola num ano, mas retorna no ano seguinte. Evasão significa que o aluno sai da escola e não volta mais para o sistema.”.
+
+Neste estudo serão considerados todos os alunos que o motivo de saída do curso não tenha sido formatura. Não entraremos no mérito se o mesmo tenha ou não iniciado o curso, ou seja, se possui uma matrícula serão tratados os motivos de saída do curso.
+
+Foram pesquisadas algumas metodologias e ferramentas,  mas não especificamente com enfoque em sistemas acadêmicos e com fonte de dados em um data warehouse. 
+
+Preliminarmente será construído um data warehouse utilizando as fonte de dados dos sistemas acadêmicos. Kimball(2013) descreve em seu livro como o próprio título diz, um conjunto de  ferramentas e técnicas para modelagem dimensional. Serve de tutorial para construção de um data warehouse para iniciantes e experientes no assunto.
+
+Hiragi(2008) propôs uma metodologia de mineração de dados, derivada do modelo de referencia CRISP-DM, que auxilia a exploração das bases de dados por pesquisadores visando facilitar a realização de tarefas previstas  nas seguintes fases do CRISP-DM: Entendimento do negócio, compreensão dos dados, preparação dos dados, modelagem, avaliação dos modelos gerados e colocação em uso.  Para materializar  a metodologia proposta e automatizar a sua utilização, foi criada uma ferramenta para tal.
+
+Não vamos criar uma ferramenta para implementação de uma metodologia de mineração de dados, mas iremos nos basear no CRISP-DM para coleta e tratamento dos dados.
+
+Com relação às técnicas de mineração de dados, Han(2006) descreve em seu livro  tudo o que está envolvido no projeto de mineração de dados como bancos de dados relacionais e analíticos, ferramentas de bancos de dados, matemática, estatística, linguagem de programação para banco de dados.
+
+
+
+
+
+
+
+
+
+
 
 \section{Citações}%
    Citações: 
