--- a/mendeley_v2.bib
+++ b/mendeley_v2.bib
@@ -1,11 +1,12 @@
-@article{Beatriz2007ABrasileiro,
-    title = {{a Evas{\~{a}}o No Ensino Superior Brasileiro}},
+@article{SilvaFilhoRobertoLealLoboandMotejunasPauloRobertoandHipolitoOscarandLobo2007ABrasileiro.,
+    title = {{A evas{\~{a}}o no ensino superior brasileiro.}},
     year = {2007},
     journal = {Cadernos de Pesquisa},
-    author = {Beatriz, Maria and Melo, D E Carvalho},
+    author = {Silva Filho, Roberto Leal Lobo and Motejunas, Paulo Roberto and Hip{\{}{\textbackslash}'o{\}}lito, Oscar and Lobo, Maria Beatriz Carvalho Melo},
     number = {132},
     pages = {641--659},
     volume = {37},
+    publisher = {SciELO Brasil},
     keywords = {Ensino superior, evas{\~{a}}o escolar-Brasil}
 }
 
@@ -14,6 +15,30 @@
     year = {2016},
     author = {Veneroso, Jacqueline},
     pages = {141--161}
+}
+
+@book{PeteChapmanNCRJulianClintonSPSS2000CRISP-DMGuide,
+    title = {{CRISP-DM 1.0 – Step-by-step Data Mining Guide}},
+    year = {2000},
+    author = {Pete Chapman (NCR), Julian Clinton (SPSS), Randy Kerber (NCR) and , Thomas Khabaza (SPSS), Thomas Reinartz(DaimlerChrysler) and Co(DaimlerChrysler), lin Shearer (SPSS) and Rüdiger Wirth},
+    editor = {Consortium, SPSS & CRIPS-DM},
+    publisher = {SPSS {\&} CRIPS-DM Consortium}
+}
+
+@book{Carvalho2005DataMining,
+    title = {{Data Mining}},
+    year = {2005},
+    author = {Carvalho, L. A. V.},
+    editor = {LTDA, Editora Ciência Moderna},
+    address = {Rio de Janeiro}
+}
+
+@book{Han2006DataTechniques,
+    title = {{Data Mining: Concepts and Techniques}},
+    year = {2006},
+    author = {Han, J. & Kamber M.(},
+    edition = {2},
+    publisher = {Publishing Services Manager Simon Crump}
 }
 
 @article{Pereira2003DeterminantesPara,
@@ -59,8 +84,8 @@
     keywords = {Abandono, Educa{\c{c}}{\~{a}}o Superior, Evas{\~{a}}o, Regress{\~{a}}o Log{\'{i}}stica}
 }
 
-@article{Gilioli2016EVASAOGilioli,
-    title = {{EVAS{\~{A}}O EM INSTITUI{\c{C}}ÕES FEDERAIS DE ENSINO SUPERIOR NO BRASIL : EXPANS{\~{A}}O DA REDE , SISU E DESAFIOS Renato de Sousa Porto Gilioli}},
+@article{Gilioli2016EvasaoDesafios,
+    title = {{Evas{\~{a}}o em institui{\c{c}}ões federais de ensino superior do Brasil : expans{\~{a}}o da rede , SISU e desafios}},
     year = {2016},
     author = {Gilioli, Renato de Sousa}
 }
@@ -109,6 +134,12 @@
     url = {http://portal.inep.gov.br/artigo/-/asset_publisher/B4AQV9zFY7Bv/content/informe-estatistico-do-mec-revela-melhoria-do-rendimento-escolar/21206}
 }
 
+@article{Hiragi2008MineracaoPublicacao,
+    title = {{Minera{\c{c}}{\~{a}}o de Dados em Base de Germoplasma CIP - Cataloga{\c{c}}{\~{a}}o na Publica{\c{c}}{\~{a}}o}},
+    year = {2008},
+    author = {Hiragi, Gilberto D E Oliveira and Oliveira, Gilberto De}
+}
+
 @article{Andriola2006OpinioesUFC,
     title = {{Opiniões de docentes e de coordenadores acerca do fen{\^{o}}meno da evas{\~{a}}o discente dos cursos de gradua{\c{c}}{\~{a}}o da Universidade Federal do Cear{\'{a}} (UFC)}},
     year = {2006},
@@ -132,6 +163,13 @@
     volume = {25}
 }
 
+@book{SallesF.Souza2013PentahoPratica,
+    title = {{Pentaho na Pr{\'{a}}tica}},
+    year = {2013},
+    author = {Salles, F. {\&} Souza, C. M. & Domingos C.},
+    editor = {AG, SPSS Inc.; NCR Systems Engineering Copenhagen & DaimlerChrysler}
+}
+
 @article{Catani2006PROUNI:Superior,
     title = {{PROUNI: democratiza{\c{c}}{\~{a}}o do acesso {\`{a}}s Institui{\c{c}}ões de Ensino Superior?}},
     year = {2006},
@@ -145,10 +183,29 @@
     issn = {0104-4060}
 }
 
-@article{Saccaro2016RETENCAOPNAES,
-    title = {{RETEN{\c{C}}{\~{A}}O E EVAS{\~{A}}O NO ENSINO SUPERIOR BRASILEIRO: UMA AN{\'{A}}LISE DOS EFEITOS DA BOLSA PERMAN{\^{E}}NCIA DO PNAES}},
+@article{DaCunhaJacquelineVenerosoAlvesandNascimentoEduardoMendesanddeOliveiraDurso2016RazoesSudeste,
+    title = {{Razões e influ{\^{e}}ncias para a evas{\~{a}}o universit{\'{a}}ria: Um estudo com estudantes ingressantes nos cursos de ci{\^{e}}ncias cont{\'{a}}beis de institui{\c{c}}ões p{\'{u}}blicas federais da regi{\~{a}}o sudeste}},
+    year = {2016},
+    journal = {Advances in Scientific and Applied Accounting},
+    author = {Da Cunha, Jacqueline Veneroso Alves and Nascimento, Eduardo Mendes and de Oliveira Durso, Samuel},
+    number = {2},
+    pages = {141--161},
+    volume = {9},
+    url = {http://dx.doi.org/10.14392/asaa.2016090202},
+    doi = {10.14392/asaa.2016090202}
+}
+
+@article{Saccaro2016RetencaoPNAES,
+    title = {{Reten{\c{c}}{\~{a}}o e evas{\~{a}}o no ensino superior brasileiro: uma an{\'{a}}lise dos efeitos da bolsa perman{\^{e}}ncia do PNAES}},
     year = {2016},
     journal = {44{${}^\circ$} Encontro Nacional de Economia-Anpec, 2016, Brasil.},
     author = {Saccaro, Alice and Tulio, Marco and Fran{\c{c}}a, Aniceto},
     keywords = {dropout rate, retention, student aid, tertiary education}
+}
+
+@book{KimballRalphROSS2011TheModeling,
+    title = {{The data warehouse toolkit: the complete guide to dimensional modeling}},
+    year = {2011},
+    author = {Kimball, Ralph; ROSS, Margy},
+    editor = {Sons, John Wiley &}
 }
