--- a/monografia.tex
+++ b/monografia.tex
@@ -8,7 +8,7 @@
 
 % \documentclass[engenharia]{UnB-CIC}%
 \documentclass[qualificacao,mestrado,ppca]{UnB-CIC}%
-
+%\usepackage[square]{natbib}
 %\usepackage{pdfpages}% incluir PDFs, usado no apêndice
 
 
