ultima versao Krisley

--- a/tex/0_estruturaTemp.tex
+++ b/tex/0_estruturaTemp.tex
@@ -72,11 +72,12 @@ Para realização do estudo serão usadas como fonte as bases de dados dos siste
 
 A priori o conceito de evasão parece único, ou seja, o aluno sai do curso por um motivo diferente de formatura.  Porém, o conceito pode mudar de autor para autor. Sendo assim existem vários conceitos para evasão. 
 
-Segundo [SBARDELINI,2001], evasão não pode ser considerada somente abandono da instituição. Uma troca de curso, por exemplo, pode ser considerada uma evasão. Contudo, neste projeto abordaremos vários tipos de evasões.
+Segundo [Teresa,2001] %\cite{Teresa2001IdentidadeUniversitaria}
+, evasão não pode ser considerada somente abandono da instituição. Uma troca de curso, por exemplo, pode ser considerada uma evasão. Contudo, neste projeto abordaremos vários tipos de evasões.
  
 Para o [INEP,1996], abandono e evasão são diferentes. “O conceito técnico de abandono é diferente de evasão. Abandono quer dizer que o aluno deixa a escola num ano, mas retorna no ano seguinte. Evasão significa que o aluno sai da escola e não volta mais para o sistema.”.
 
-Neste estudo serão considerados todos os alunos que o motivo de saída do curso não tenha sido formatura. Não entraremos no mérito se o mesmo tenha ou não iniciado o curso, ou seja, se possui uma matrícula serão tratados os motivos de saída do curso.
+Neste estudo serão considerados todos os alunos que o motivo de saída do curso não tenha sido formatura. Não entraremos no mérito se o mesmo tenha ou não iniciado o curso, ou seja, se possui uma matrícula serão tratados os motivos de saída do curso. Algo semelhante ao estudo proposto foi realizado por [Pereira,2011], onde o mesmo analisou a dimensão do abandono escolar na Universidade Federal do Mato Grosso e o perfil sócioeconômico dos mesmos. %\cite{Pereira2011EvasaoGrosso}
 
 Foram pesquisadas algumas metodologias e ferramentas,  mas não especificamente com enfoque em sistemas acadêmicos e com fonte de dados em um \textit{data warehouse}. 
 
